# leads_service

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  Тестовое задание Backend (1).md
src/: main.py
src/api/: dependencies.py  exception_handlers.py
src/api/routes/: leads.py
src/api/schemas/: errors.py  leads.py
src/app/: commands.py  exceptions.py  interfaces.py  services.py
src/core/: config.py
src/domain/: events.py  lead.py
src/infrastructure/database/: config.py  models.py  repositories.py  uow.py
src/infrastructure/kafka/: consumer.py  producer.py
src/migrations/: env.py
src/migrations/versions/: 7e6cbbaf797e_initial_migration.py
src/workers/: consumer.py  outbox_publisher.py
tests/unit/: conftest.py  test_api.py  test_domain.py  test_services.py
