[project]
name = "leads-service"
version = "0.1.0"
description = "Leads service with outbox pattern and Kafka"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.14.0",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "loguru>=0.7.3",
    "phonenumbers>=9.0.34",
    "pydantic-extra-types>=2.11.1",
    "pydantic-settings>=2.14.2",
    "python-snappy>=0.7.3",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[project.optional-dependencies]
dev = [
    "anyio>=4.0",
    "httpx>=0.28",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]
